// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested arguments 1`] = `
Object {
  "status": true,
  "value": Array [
    Object {
      "type": 0,
      "value": "      ",
    },
    Object {
      "options": Object {
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "No taxes apply.",
            },
          ],
        },
        "yes": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "An additional ",
            },
            Object {
              "style": "percent",
              "type": 2,
              "value": "taxRate",
            },
            Object {
              "type": 0,
              "value": " tax will be collected.",
            },
          ],
        },
      },
      "type": 5,
      "value": "taxableArea",
    },
    Object {
      "type": 0,
      "value": "
    ",
    },
  ],
}
`;

exports[`trivial 1`] = `
Object {
  "status": true,
  "value": Array [
    Object {
      "type": 0,
      "value": "      ",
    },
    Object {
      "options": Object {
        "female": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "She",
            },
          ],
        },
        "male": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "He",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "They",
            },
          ],
        },
      },
      "type": 5,
      "value": "gender",
    },
    Object {
      "type": 0,
      "value": " will respond shortly.
    ",
    },
  ],
}
`;
